--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "winston": "^3.17.0"
   }
 }
