--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "tesseract.js": "^6.0.1",
     "winston": "^3.17.0"
   }
 }
